get stream by code
