# dto/streamGetDto.go
@@ -1,0 +1,6 @@
+package dto
+
+type StreamGetDto struct {
+	Name      string `json:"name"`
+	PeopleNum int64  `json:"peopleNum"`
+}
